Add base quiz validator test